Implemented chat for TUI
Added Debug_Mode also for TUI
Fixed setConverter in setChat in ViewGUIControllerMatch
Combined area for log and chat in a single tabPane for GUI